--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         </div>
                                     <p>
                                         We accept all credit cards on location.</p>
-                                    <img src="img/credit.png" alt="cards" title="payments" class="imgsmall center">
+                                    <img src="img/credit-cards.gif" alt="cards" title="payments" class="imgsmall center">
                         </div>
                     </div>
                 </div>
